--- a/IO2017/src/main/resources/templates/create_dictionary.html
+++ b/IO2017/src/main/resources/templates/create_dictionary.html
@@ -11,20 +11,27 @@
 	<div th:replace="fragments/header :: header"></div>
 	<nav th:replace="fragments/sidebar :: sidebar"></nav>
 	<div class="col-md-4 col-md-offset-5">
-		<form th:action="@{/dictionaries/newDictionary/submit}" th:object="${dictionary}"
+		<form th:action="@{/dictionaries/newDictionary/submit}"
 			method="post" class="form-horizontal">
 			<div class="form-group">
 				<label for="name">Nazwa słownika:</label> <input type="text"
-					th:field="*{name}" class="form-control" id="name" />
+					th:field="*{dictionary.name}" class="form-control" id="name" />
 				
-				<label for="username">Użytkownik:</label> <input type="text"
-					th:field="*{user.userName}" class="form-control" id="username" />
+				<input type="hidden" th:field="*{dictionary.user}"
+					class="form-control" id="username" />
 				
 				<label for="category">Kategoria: </label>
-		<select id="category" >
+		<select id="category" th:field="*{dictionary.category}">
           <option th:each="var : ${allCategories}" 
                   th:value="${var.categoryId}" 
-                  th:text="${var.name}">Thymus Thymi</option>
+                  th:text="${var.name}"></option>
+        </select>
+        
+        <label for="language">Język: </label>
+		<select id="language" th:field="*{dictionary.language}">
+          <option th:each="var : ${languages}" 
+                  th:value="${var.name}" 
+                  th:text="${var.name}"></option>
         </select>
                 
 			</div>
