Dodana autoryzacja do słowników, których nie jesteśmy użytkownikami.
Dodana walidacja do zmiany nazwy słownika, czy taki już nie istnieje.
Poprawa niektórych stylów.

--- a/IO2017/src/main/resources/templates/admin_categories.html
+++ b/IO2017/src/main/resources/templates/admin_categories.html
@@ -15,7 +15,7 @@
 		<a th:href="@{/admin}" class="btn btn-primary" role="button">Panel
 			administracyjny</a>
 		<a th:href="@{/admin/categories/newCategory}"
-			class="btn btn-default" role="button">Nowa kategoria</a>
+			class="btn btn-success" role="button">Nowa kategoria</a>
 	
 		<h1>Kategorie:</h1>
 		
