--- a/IO2017/src/main/resources/templates/admin.html
+++ b/IO2017/src/main/resources/templates/admin.html
@@ -3,7 +3,7 @@
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
-<title>Spring Security Example</title>
+<title>Panel administracyjny</title>
 <thymeleaf th:replace="fragments/head :: head" />
 </head>
 <body>
