--- a/IO2017/src/main/resources/templates/admin_users.html
+++ b/IO2017/src/main/resources/templates/admin_users.html
@@ -13,7 +13,7 @@
 	<div class="col-md-8 col-md-offset-3">
 		<a th:href="@{/admin}" class="btn btn-primary" role="button">Panel
 			administracyjny</a> <a th:href="@{/admin/users/newUser}"
-			class="btn btn-default" role="button">Nowy użytkownik</a>
+			class="btn btn-success" role="button">Nowy użytkownik</a>
 		<h1>Użytkownicy:</h1>
 		<p>
 			My id: <span th:text="${myId}"></span>
