--- a/IO2017/src/main/resources/templates/create_category.html
+++ b/IO2017/src/main/resources/templates/create_category.html
@@ -10,20 +10,26 @@
 	<main class='wrapper'>
 	<div th:replace="fragments/header :: header"></div>
 	<nav th:replace="fragments/sidebar :: sidebar"></nav>
+	
 	<div class="col-md-4 col-md-offset-5">
+		<a role="button" class="btn btn-info" th:href="@{/admin/categories}">Cofnij</a>
+	</div>
+	
+	
+	<div class="col-md-4 col-md-offset-5" style="padding-top: 10px;">
 		<form th:action="@{/admin/categories/newCategory/submit}" th:object="${category}"
 			method="post" class="form-horizontal">
 			<div class="form-group">
 				<label for="name">Nazwa kategorii:</label> <input type="text"
 					th:field="*{name}" class="form-control" id="name" />
 			</div>
-						<button type="submit" class="btn btn-default">Zatwierdź</button>
+						<button type="submit" class="btn btn-success">Zatwierdź</button>
 			<button type="reset" class="btn btn-default">Resetuj</button>
 			
 		<p th:each="error: ${#fields.errors()}"
           th:text="${error}">Validation error</p> <!-- TODO błędy walidacji na czerwono -->
 		</form>
-		<a role="button" class="btn btn-info" th:href="@{/admin/categories}">Cofnij</a>
+		
 	</div>
 	<div th:replace="fragments/footer :: footer"></div>
 	</main>
