--- a/IO2017/src/main/resources/templates/create_dictionary.html
+++ b/IO2017/src/main/resources/templates/create_dictionary.html
@@ -10,38 +10,51 @@
 	<main class='wrapper'>
 	<div th:replace="fragments/header :: header"></div>
 	<nav th:replace="fragments/sidebar :: sidebar"></nav>
+	
 	<div class="col-md-4 col-md-offset-5">
+		<a role="button" class="btn btn-info" th:href="@{/dictionaries}">Cofnij</a>
+	</div>
+	
+	<div class="col-md-4 col-md-offset-5"  style="padding-top: 10px;">
 		<form th:action="@{/dictionaries/newDictionary/submit}"
-			method="post" class="form-horizontal">
+			method="post" class="form-horizontal" th:object="${dictionary}">
+			
 			<div class="form-group">
 				<label for="name">Nazwa słownika:</label> <input type="text"
-					th:field="*{dictionary.name}" class="form-control" id="name" />
+					th:field="*{name}"
+					 class="form-control" id="name" />
 				
-				<input type="hidden" th:field="*{dictionary.user}"
+				<input type="hidden" th:field="*{user}"
 					class="form-control" id="username" />
-				
+          	
 				<label for="category">Kategoria: </label>
-		<select id="category" th:field="*{dictionary.category}">
+		<select class="form-control" id="category" th:field="*{category}">
           <option th:each="var : ${allCategories}" 
                   th:value="${var.categoryId}" 
                   th:text="${var.name}"></option>
         </select>
         
         <label for="language">Język: </label>
-		<select id="language" th:field="*{dictionary.language}">
+		<select class="form-control"  id="language" th:field="*{language}">
           <option th:each="var : ${languages}" 
                   th:value="${var.name}" 
                   th:text="${var.name}"></option>
         </select>
                 
 			</div>
-						<button type="submit" class="btn btn-default">Zatwierdź</button>
-			<button type="reset" class="btn btn-default">Resetuj</button>
 			
-		<p th:each="error: ${#fields.errors()}"
-          th:text="${error}">Validation error</p> <!-- TODO błędy walidacji na czerwono -->
+				<div class="alert alert-danger" th:each="error: ${#fields.errors('*')}"
+          			th:text="${error}" >Validation error</div>
+          			
+						<button type="submit" class="btn btn-success">Zatwierdź</button>
+			<button type="reset" class="btn btn-default">Resetuj</button>
+
+
+
+
 		</form>
-		<a role="button" class="btn btn-info" th:href="@{/admin/categories}">Cofnij</a>
+		
+		
 	</div>
 	<div th:replace="fragments/footer :: footer"></div>
 	</main>
