dodana edycja słowników i słów

--- a/IO2017/src/main/resources/templates/categories.html
+++ b/IO2017/src/main/resources/templates/categories.html
@@ -27,7 +27,7 @@
 		        	</a>
 		          </div>
 		          <ul>
-		          	<li th:each="dictionary : ${category.Dictonaries}">
+		          	<li th:each="dictionary : ${category.dictionaries}">
 		          		<span th:text="${dictionary.name}"></span>
 		          	</li>
 		          </ul>
