--- a/IO2017/src/main/resources/templates/admin_dictionaries.html
+++ b/IO2017/src/main/resources/templates/admin_dictionaries.html
@@ -43,7 +43,7 @@
 				<td th:text="${dictionary.category.name}"></td>
 				<td th:unless="${isNotAdminPage}"  th:text="${dictionary.user.userName}"></td>
 				<td><a role="button" class="btn btn-warning"  th:href="@{/dictionaries/editWords(id=${dictionary.dictionaryId})}">Edytuj słówka</a></td>
-				<td><a role="button" class="btn btn-warning"  th:href="@{/admin/dictionaries/editDictionary(id=${dictionary.dictionaryId})}">Edytuj TODO</a></td>
+				<td><a role="button" class="btn btn-warning"  th:href="@{/dictionaries/editDictionary(id=${dictionary.dictionaryId})}">Edytuj</a></td>
 				<td><a role="button" class="btn btn-danger" th:href="@{/dictionaries/deleteDictionary(id=${dictionary.dictionaryId})}">Usuń</a></td>
 				
 			</tr>
