--- a/IO2017/src/main/resources/templates/edit_user.html
+++ b/IO2017/src/main/resources/templates/edit_user.html
@@ -13,41 +13,45 @@
 	<nav th:replace="fragments/sidebar :: sidebar"></nav>
 	<div class="col-md-4 col-md-offset-5">
 		<form action="#" th:action="@{/admin/users/editUser/submit}"
-			method="post" class="form-horizontal">
+			method="post" class="form-horizontal" th:object="${user}">
 			<div class="form-group">
 				<label for="login">Login:</label> <input type="text"
-					th:field="*{user.userName}" class="form-control" id="login" />
+					th:field="*{username}" class="form-control" id="login" />
 			</div>
-			<input type="hidden" th:field="*{user.userId}" /> <input
-				type="hidden" th:field="*{user.password}" />
+			<input type="hidden" th:field="*{userId}" />
+			
 			<div class="form-group">
-				<label for="new_pwd">Nowe hasło:</label> <input type="password"
-					th:field="*{user.password}" class="form-control" id="new_pwd" />
+				<label for="password">Nowe hasło: </label> <input type="password"
+					th:field="*{password}" class="form-control" id="password" />
 			</div>
-			<span style="color: gray;"> (zostaw puste jak bez zmiany) </span>
+			
 			<div class="form-group">
 				<label for="email">Adres email:</label> <input type="email"
-					th:field="*{user.email}" class="form-control" id="email" />
+					th:field="*{email}" class="form-control" id="email" />
 			</div>
 			<div class="form-group">
 				<label for="imie">Imię:</label> <input type="text"
-					th:field="*{user.name}" class="form-control" id="imie" />
+					th:field="*{name}" class="form-control" id="imie" />
 			</div>
 			<div class="form-group">
 				<label for="nazwisko">Nazwisko:</label> <input type="text"
-					th:field="*{user.surname}" name="_enabled" th:value="${enabled}"
+					th:field="*{surname}" name="_enabled" th:value="${enabled}"
 					class="form-control" id="nazwisko" />
 			</div>
-			<input type="hidden" name="_enabled" th:value="${enabled}" />
+			
 			<div class="checkbox">
 				<label><input type="checkbox" id="enabled" name="enabled"
+				th:field="*{enabled}" 
 					th:checked="${enabled}" /> Aktywny</label>
 			</div>
-			<input type="hidden" name="_roleAdmin" th:value="${roleAdmin}" />
+			
 			<div class="checkbox">
 				<label><input type="checkbox" id="roleAdmin"
-					name="roleAdmin" th:checked="${roleAdmin}" /> Admin</label>
+					th:field="*{admin}" 
+					name="admin" th:checked="${admin}" /> Admin</label>
 			</div>
+			<div class="alert alert-danger" th:each="error: ${#fields.errors('*')}"
+         			th:text="${error}" >Validation error</div>
 			<button type="submit" class="btn btn-default">Zatwierdź</button>
 			<button type="reset" class="btn btn-default">Resetuj</button>
 		</form>
