--- a/IO2017/src/main/resources/templates/quiz_flashcard.html
+++ b/IO2017/src/main/resources/templates/quiz_flashcard.html
@@ -7,10 +7,6 @@
 
 <script>
 var obj = {
-	    'row1' : {
-	        'key1' : 'input1',
-	        'key2' : 'inpu2'
-	    },
 	    <th:block th:inline="text" th:each="word, iter : ${words}">
 	    '[[${iter.index}]]' : {
 	    	'firstLang' : '[[${word.polishWord}]]',
@@ -67,12 +63,12 @@ var obj = {
 	
 	function previousPage() {
 		currentPage--;
-		changeWords(currentPage, 1);
+		changeWords(currentPage);
 	}
 	
 	window.onload = function() {
-	  changeWords(0);
-	  numberOfPages--;
+		numberOfPages--;
+		changeWords(0);
 	};
 
 </script>
@@ -84,12 +80,14 @@ var obj = {
 <main class="wrapper">
 	<div th:replace="fragments/header :: header"></div>
 	<nav th:replace="fragments/sidebar :: sidebar"></nav>
-	<div class="col-md-8 col-md-offset-3">
+	<div  class="col-md-8 col-md-offset-3">
 			<h2>Nazwa słownika: <span th:text="${dictionaryName}"></span> </h2>
-			<h3 class="card-title">Słówko <span id="pageNumber">X</span> / <span th:text="${wordsNumber}"></span>  </h3>          
-		  <div class="row" style="height: 600px;">
+			<h3 th:if="${hasWords}" class="card-title">Słówko <span id="pageNumber">X</span> / <span th:text="${wordsNumber}"></span>  </h3>
+			<a role="button" class="btn btn-warning" th:if="${hasWords}"
+				th:href="@{/quiz/flashcards(id=${dictionaryId}, mode=${changeMode})}">Zmień kierunek</a>
+		  <div th:if="${hasWords}" class="row" style="height: 600px;">
 		    <div class="col-md-4" style="height: 500px;">
-			    <span id="prevPg" style="float:right; margin-top: 235px; font-size: 30px;" class="glyphicon glyphicon-arrow-left"
+			    <span id="prevPg" style="color: indianred; float:right; margin-top: 235px; font-size: 30px;" class="glyphicon glyphicon-arrow-left"
 		    			 onclick="previousPage();" />
 		    </div>
 			<div class="col-md-4" style="height: 500px;">
@@ -111,10 +109,13 @@ var obj = {
 			</div>
 		    <div class="col-md-4" style="height: 500px;">
 		    	
-		    	<span id="nextPg" style="float:left; margin-top: 235px; font-size: 30px;" class="glyphicon glyphicon-arrow-right"
+		    	<span id="nextPg" style="color: indianred; float:left; margin-top: 235px; font-size: 30px;" class="glyphicon glyphicon-arrow-right"
 		    			 onclick="nextPage();" />
 		    </div>
 		  </div>
+		  	<div th:unless="${hasWords}" class="col-md-12" style="height: 500px;">
+				<h4>Słownik nie zawiera żadnych słówek</h4>
+			</div>
 	</div>
 	
 	<div th:replace="fragments/footer :: footer"></div>
