--- a/IO2017/src/main/resources/templates/categories.html
+++ b/IO2017/src/main/resources/templates/categories.html
@@ -29,6 +29,8 @@
 		          <ul>
 		          	<li th:each="dictionary : ${category.dictionaries}">
 		          		<span th:text="${dictionary.name}"></span>
+		          		<a th:href="@{/quiz/flashcards(id=${dictionary.dictionaryId})}" class="btn btn-primary" role="button">Fiszki</a>
+		          		<a th:href="@{/quiz/closed(id=${dictionary.dictionaryId})}" class="btn btn-primary" role="button">Pytania zamknięte</a>
 		          	</li>
 		          </ul>
 		      </div>
