--- a/IO2017/src/main/resources/templates/quiz_closed.html
+++ b/IO2017/src/main/resources/templates/quiz_closed.html
@@ -11,12 +11,25 @@
 	<div th:replace="fragments/header :: header"></div>
 	<nav th:replace="fragments/sidebar :: sidebar"></nav>
 	<div  class="col-md-8 col-md-offset-3">
-	<h1> tu się uczymy języka</h1>
-	<!-- <form th:action="@{/login}" method="post" class="form-horizontal">
-			<select name="mode">
-			<option>Polski na <span th:text="${dictionaryLanguage}"></span></option>
+	<!-- <h1> tu się uczymy języka <span th:text="${dictionaryLanguage}"></span></h1> -->
+	<form th:action="@{/quiz/closed_question}" method="post" class="form-horizontal">
+	<div class="form-group">
+			<select class="custom-select" name="mode">
+			<option value="0">POLSKI na <span th:text="${dictionaryLanguage}"></span></option>
+			<option value="1"><span th:text="${dictionaryLanguage}"></span> na POLSKI</option>
 			</select>
-	</div> -->
+			
+			<select class="custom-select" name="number">
+			<div th:if="${wordsNumber > 10}">
+			<option th:each="i: ${#numbers.sequence(10,wordsNumber, 10)}" value="${i}"><span th:text="${i}"></span></option>
+			</div>
+			<option value="${wordsNumber}">Wszystkie</option>
+			</select>
+			
+			<button type="submit" class="btn btn-default">Generuj quiz</button>
+			</div>
+			</form>
+	</div>
 	</main>
 	</body>
 	</html>
