--- a/IO2017/src/main/resources/templates/quiz_options.html
+++ b/IO2017/src/main/resources/templates/quiz_options.html
@@ -12,14 +12,20 @@
 	<nav th:replace="fragments/sidebar :: sidebar"></nav>
 	<div  class="col-md-8 col-md-offset-3">
 	<!-- <h1> tu się uczymy języka <span th:text="${dictionaryLanguage}"></span></h1> -->
-	<form th:action="@{/quiz/closed_question}" method="post" class="form-horizontal">
+	<form th:action="@{/quiz/redirect}" method="get" class="form-horizontal">
 	<div class="form-group">
-			<select class="custom-select" name="mode">
+	<label for="option">Wybierz sposób nauki:</label>
+			<select class="form-control" id="option">
+			<option value="0">Pytania otwarte</option>
+			<option value="1">Pytania zamknięte</option>
+			</select>
+	<label for="mode">Wybierz kierunek tłumaczenia:</label>
+			<select class="form-control" id="mode">
 			<option value="0">POLSKI na <span th:text="${dictionaryLanguage}"></span></option>
 			<option value="1"><span th:text="${dictionaryLanguage}"></span> na POLSKI</option>
 			</select>
-			
-			<select class="custom-select" name="number">
+			<label for="number">Wybierz liczbę słówek:</label>
+			<select class="form-control" id="number">
 			<div th:if="${wordsNumber > 10}">
 			<option th:each="i: ${#numbers.sequence(10,wordsNumber, 10)}" value="${i}"><span th:text="${i}"></span></option>
 			</div>
@@ -30,6 +36,7 @@
 			</div>
 			</form>
 	</div>
+	<div th:replace="fragments/footer :: footer"></div>
 	</main>
 	</body>
 	</html>
