--- a/IO2017/src/main/resources/templates/quiz_options.html
+++ b/IO2017/src/main/resources/templates/quiz_options.html
@@ -12,29 +12,44 @@
 	<nav th:replace="fragments/sidebar :: sidebar"></nav>
 	<div  class="col-md-8 col-md-offset-3">
 	<!-- <h1> tu się uczymy języka <span th:text="${dictionaryLanguage}"></span></h1> -->
-	<form th:action="@{/quiz/redirect}" method="get" class="form-horizontal">
-	<div class="form-group">
-	<label for="option">Wybierz sposób nauki:</label>
-			<select class="form-control" id="option">
-			<option value="0">Pytania otwarte</option>
-			<option value="1">Pytania zamknięte</option>
-			</select>
-	<label for="mode">Wybierz kierunek tłumaczenia:</label>
-			<select class="form-control" id="mode">
-			<option value="0">POLSKI na <span th:text="${dictionaryLanguage}"></span></option>
-			<option value="1"><span th:text="${dictionaryLanguage}"></span> na POLSKI</option>
+	<h1>Ucz się w trybie otwartych pytań</h1>
+	<form th:action="@{/quiz/open}" method="GET" class="form-horizontal">
+		<div class="form-group">
+			<input type="hidden" name="id" th:value="${id}"/>
+			<label for="mode">Wybierz kierunek tłumaczenia:</label>
+			<select class="form-control" name="mode" id="mode">
+				<option value="0">POLSKI na <span th:text="${dictionaryLanguage}"></span></option>
+				<option value="1"><span th:text="${dictionaryLanguage}"></span> na POLSKI</option>
 			</select>
 			<label for="number">Wybierz liczbę słówek:</label>
-			<select class="form-control" id="number">
-			<div th:if="${wordsNumber > 10}">
-			<option th:each="i: ${#numbers.sequence(10,wordsNumber, 10)}" value="${i}"><span th:text="${i}"></span></option>
-			</div>
-			<option value="${wordsNumber}">Wszystkie</option>
+			<select class="form-control" name="number" id="number">
+				<div th:if="${wordsNumber > 10}">
+					<option th:each="i: ${#numbers.sequence(10,wordsNumber, 10)}" th:value="${i}"><span th:text="${i}"></span></option>
+				</div>
+				<option th:value="${wordsNumber}">Wszystkie</option>
 			</select>
-			
-			<button type="submit" class="btn btn-default">Generuj quiz</button>
-			</div>
-			</form>
+			<input type="submit" class="btn btn-default" value="Generuj quiz" />
+		</div>
+	</form>
+	<h1>Ucz się w trybie zamkniętych pytań</h1>
+	<form th:action="@{/quiz/closed}" method="GET" class="form-horizontal">
+		<div class="form-group">
+			<input type="hidden" name="id" th:value="${id}"/>
+			<label for="mode">Wybierz kierunek tłumaczenia:</label>
+			<select class="form-control" name="mode" id="mode">
+				<option value="0">POLSKI na <span th:text="${dictionaryLanguage}"></span></option>
+				<option value="1"><span th:text="${dictionaryLanguage}"></span> na POLSKI</option>
+			</select>
+			<label for="number">Wybierz liczbę słówek:</label>
+			<select class="form-control" name="number" id="number">
+				<div th:if="${wordsNumber > 10}">
+					<option th:each="i: ${#numbers.sequence(10,wordsNumber, 10)}" th:value="${i}"><span th:text="${i}"></span></option>
+				</div>
+				<option th:value="${wordsNumber}">Wszystkie</option>
+			</select>
+			<input type="submit" class="btn btn-default" value="Generuj quiz" />
+		</div>
+	</form>
 	</div>
 	<div th:replace="fragments/footer :: footer"></div>
 	</main>
