--- a/IO2017/src/main/resources/templates/admin_dictionaries.html
+++ b/IO2017/src/main/resources/templates/admin_dictionaries.html
@@ -41,7 +41,7 @@
 				<td th:text="${dictionary.name}"></td>
 				<td th:text="${dictionary.language}"></td>
 				<td th:text="${dictionary.category.name}"></td>
-				<td th:unless="${isNotAdminPage}"  th:text="${dictionary.user.userName}"></td>
+				<td th:unless="${isNotAdminPage}"  th:text="${dictionary.user} ? ${dictionary.user.userName} : 'N/A'"></td>
 				<td><a role="button" class="btn btn-warning"  th:href="@{/dictionaries/editWords(id=${dictionary.dictionaryId})}">Edytuj słówka</a></td>
 				<td><a role="button" class="btn btn-warning"  th:href="@{/dictionaries/editDictionary(id=${dictionary.dictionaryId})}">Edytuj</a></td>
 				<td><a role="button" class="btn btn-danger" th:href="@{/dictionaries/deleteDictionary(id=${dictionary.dictionaryId})}">Usuń</a></td>
