--- a/IO2017/src/main/resources/templates/quiz_open.html
+++ b/IO2017/src/main/resources/templates/quiz_open.html
@@ -84,7 +84,7 @@
 	
 	function showResult() {
 		submitTranslation();
- 		window.alert(computeResult(0,0));
+ 		window.alert("Twój wynik to: " + computeResult(0,0) + "/" + (numberOfPages+1));
 	}
 	
 	window.onload = function() {
