Dodanie encji score.

--- a/IO2017/src/main/resources/templates/fragments/head.html
+++ b/IO2017/src/main/resources/templates/fragments/head.html
@@ -12,5 +12,8 @@
 	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <link rel="stylesheet" type="text/css"
 	href="/css/basic.css" />
+	
+  <meta name="_csrf" th:content="${_csrf.token}"/>
+  <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
 
 </thymeleaf>
